Fix contrast accessibility issues and change title of the project

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 .yelow {
-  color: #ff6b00;
+  color: #8A3B00;
 }
 
 .bg-btn {
@@ -122,7 +122,7 @@
 }
 
 .see-project-btn {
-  background-color: #ff6b00;
+  background-color: #8A3B00;
   width: 100px;
   height: 40px;
   color: white;
@@ -131,9 +131,10 @@
 
 .see-project-btn:hover {
   cursor: pointer;
-  border: 2px solid #ff6b00;
-  background-color: #fff5e1;
-  color: #ff6b00;
+  border: 2px solid #8A3B00;
+  background-color:white;
+  color: #8A3B00;
+  font-weight: bold;
 }
 
 .see-project-btn:active {
@@ -159,10 +160,11 @@
 .works-title {
   font-family: "Crete Round", serif;
   font-size: 32px;
+  
 }
 
 .see-project {
-  background-color: #ff6b00;
+  background-color: #8A3B00;
   height: 40px;
   padding: auto;
   position: absolute;
@@ -176,9 +178,10 @@
 
 .see-project:hover {
   cursor: pointer;
-  border: 2px solid #ff6b00;
-  background-color: #fff5e1;
-  color: #ff6b00;
+  border: 2px solid #8A3B00;
+  background-color:white;
+  color: #8A3B00;
+  font-weight: bold;
 }
 
 .see-project:active {
@@ -202,16 +205,17 @@
 .get-resume-btn {
   width: 10em;
   height: 40px;
-  background-color: #ff6b00;
+  background-color: #8A3B00;
   border: none;
   color: white;
 }
 
 .get-resume-btn:hover {
   cursor: pointer;
-  border: 2px solid #ff6b00;
-  background-color: #fff5e1;
-  color: #ff6b00;
+  border: 2px solid #8A3B00;
+  background-color:white;
+  color: #8A3B00;
+  font-weight: bold;
 }
 
 .get-resume-btn:active {
@@ -240,6 +244,7 @@
 .abt-me {
   font-size: 60px;
   text-align: center;
+  color: #ff6b00;
 }
 
 .categories-container {
@@ -317,7 +322,7 @@
 }
 
 .form-button {
-  background-color: #ff6b00;
+  background-color: #8A3B00;
   width: 100px;
   height: 40px;
   color: white;
@@ -327,9 +332,10 @@
 
 .form-button:hover {
   cursor: pointer;
-  border: 2px solid #ff6b00;
-  background-color: #fff5e1;
-  color: #ff6b00;
+  border: 2px solid #8A3B00;
+  background-color:white;
+  color: #8A3B00;
+  font-weight: bold;
 }
 
 .form-button:active {
@@ -547,6 +553,7 @@
     height: fit-content;
     justify-content: space-between;
     margin: 5px 40px 0 50px;
+    padding: 0 50px 20px 50px;
   }
 
   .line2 {
@@ -604,6 +611,14 @@
   .form-contact {
     grid-column: 2/3;
     grid-row: 1/2;
+  }
+
+  .input-form {
+    width: 90%;
+  }
+
+  .form-text-area {
+    width: 88%;
   }
 
   .form-button {
